--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,17 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --text-color: #F1B2CE;
+  --button-text-color: #FF0070;
+  --border-color: #FF0070;
+  --hover-color: #FF007066;
+  --outline-color: #FF0070;
+  --header-title-color: #DB00FF;
+  --paragraph-decor-color: #000028;
+  --main-content-title-color: #FF0070;
+}
+
+.theme-dark .header__rec-title {
+  display: block;
 }
