--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,18 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --main-font-family: 'IBM Plex mono', monospace;
+  --main-font-size: 18px;
+  --text-color: #F1B2CE;
+  --button-text-color: #FF0070;
+  --border-color: #FF0070;
+  --hover-color: #FF007066;
+  --outline-color: #FF0070;
+  --header-title-color: #DB00FF;
+  --paragraph-decor-color: #000028;
+  --main-content-title-color: #FF0070;
+  --header-title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --regular-font-weight: 400;
+  --bold-font-weight: 700;
+}
